[package]
name = "mfem-cpp"
description = "Static build of MFEM for use as a Rust dependency"
readme = "README.md"
authors = ["Mate Kovacs <mkovaxx@gmail.com>"]
license = "MIT"
version = "0.1.1+mfem-4.6.0"
edition = "2021"
repository = "https://github.com/mkovaxx/mfem-rs"

[dependencies]

[build-dependencies]
cmake = "0.1"

# Adding an empty workspace table so `mfem-cpp` doesn't believe
# it's in the parent workspace. This crate is excluded from
# the top-level workspace because it takes quite awhile to
# build and the crate doesn't change very often.
#[workspace]
