[package]
name = "mfem-sys"
description = "Rust bindings to MFEM"
readme = "README.md"
authors = ["Mate Kovacs <mkovaxx@gmail.com>"]
license = "MIT"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/mkovaxx/mfem-rs"
rust-version = "1.77"

[dependencies]
cxx = "1.0.137"
autocxx = "0.27"

[build-dependencies]
cmake = "0.1"
autocxx-build = "0.27"
mfem-cpp = { version = "0.3", path = "../mfem-cpp", optional = true }
semver = "1.0.22"

[features]
bundled = ["mfem-cpp"]
bundled-f32 = ["mfem-cpp/precision-f32"]

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
